infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      appname: auth
  template:
    metadata:
      labels:
        appname: auth
    spec:
      containers:
        - name: auth-container
          image: us.gcr.io/ticketing-dev-299022/auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-cip-srv
spec:
  selector:
    appname: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
