infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      appname: auth-mongo
  template:
    metadata:
      labels:
        appname: auth-mongo
    spec:
      containers:
        - name: auth-mongo-container
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-cip-srv
spec:
  selector:
    appname: auth-mongo
  ports:
    - name: auth-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
